[package]
name = "tracing_facade"
version = "0.1.0"
authors = ["Josh Gao <josh@jmgao.dev>"]
edition = "2018"

description = "facade for tracing"
homepage = "https://github.com/jmgao/tracing"
documentation = "https://docs.rs/tracing_facade"
repository = "https://github.com/jmgao/tracing"
readme = "../README.md"
keywords = ["tracing"]
license = "0BSD"

[badges]
circle-ci = { repository = "jmgao/tracing" }
maintenance = { status = "actively-developed" }

[dependencies]
scopeguard = "1.0"
serde_json = "1.0"
